Organize strictequality integration test to better account for platform differences.
PiperOrigin-RevId: 605306758